--- a/ms/figures.Rmd
+++ b/ms/figures.Rmd
@@ -202,14 +202,32 @@ plot(dat["T4"], main = 'forest',
 dev.off()
 ```
 
-# Establishment
+# Wildling abundance by ecosystem type
+
+```{r}
+results.models <- readRDS(here("output","results-models.rds"))
+results.densities <- readRDS(here("output","results-densities.rds"))
+```
 
 ```{r}
 types <- read_csv(here('data', 'types.csv')) %>% 
   mutate(name = ifelse(category == 'wetland', paste0(paste0('*',name),'*'), name)) %>% 
   rename(nin = type) %>% 
   select(-vegheight, -category, -structuring)
-  
+
+topbottomtheme <- theme_light() + 
+  theme(plot.title = element_markdown(), 
+        axis.text.y = element_markdown(),
+        axis.title.y = element_blank(),
+        axis.ticks = element_blank(),
+        strip.background =element_rect(fill="lightgrey"),
+        strip.text = element_text(colour = "black"),
+        panel.spacing = unit(1, "lines"),
+        legend.position="top",
+        legend.justification="right",
+        legend.margin=margin(-10,0,-5,-10),
+        legend.box.margin=margin(-10,0,-5,-10))
+
 toptheme <- theme_light() + 
   theme(axis.text.y = element_markdown(),
         axis.title = element_blank(),
@@ -235,11 +253,12 @@ csize <- 3
 CBdark2.3class <- c('#d95f02', '#7570b3','#1b9e77')
 ```
 
-## by height class
+## absolute abundance across species
+
+## sensitivity to random height assignment seed
 
 ```{r}
-results <- readRDS(here("output","results-models.rds"))
-plotting <- results %>% 
+plotting <- results.models %>% 
   select(-data, -model) %>% 
   unnest(preds) %>% 
   filter(is.na(locality)) %>% 
@@ -247,64 +266,6 @@ plotting <- results %>%
   mutate(hgtclassname = if_else(is.na(hgtclass), 'height \u2265 30 cm',
                                 'height \u2265 100 cm'))
 
-d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g1 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[1], size = 1) +
-  geom_point(color = CBdark2.3class[1], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-4, 1e2)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  toptheme
-
-d <- filter(plotting, species == "P.abies", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g2 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[2], size = 1) +
-  geom_point(color = CBdark2.3class[2], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-5, 1e1)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  middletheme
-
-d <- filter(plotting, species == "Larix", randomseed == 2 | is.na(randomseed)) %>% 
-  arrange(desc(hgtclass)) %>% 
-  mutate(name = fct_reorder(name, fit, first))
-g3 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[3], size = 1) +
-  geom_point(color = CBdark2.3class[3], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-3, 1e3)) +
-  facet_grid(cols = vars(hgtclassname)) +
-  labs(x = 'relative establishment likelihood') +
-  bottomtheme
-
-layoutheights <- distinct(plotting, species, name) %>% 
-  group_by(species) %>% 
-  summarize(n = n()) %>% 
-  arrange(desc(species)) %>% 
-  pull(n)
-g123 <- g1 + g2 + g3 + 
-  plot_layout(nrow = 3, heights = layoutheights)
-```
-
-```{r}
-ggsave(g123, filename= 'ggplot.svg', 
-       path = here('ms', 'figures', 'establishment'),
-       scale = 1, width = 210, height = 297, units = 'mm', dpi = 300)
-```
-
-## sensitivity to random height assignment
-
-```{r}
 d <- filter(plotting, species == "P.sitchensis-lutzii", !is.na(hgtclass)) %>% 
   arrange(match(randomseed, c(2, 1, 3)), desc(hgtclass)) %>% 
   mutate(name = fct_reorder(name, fit, first))
@@ -345,7 +306,7 @@ g3 <- ggplot(d, aes(x = fit, y = name, group = randomseed)) +
   scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
   coord_cartesian(xlim = c(1e-3, 1e3)) +
   facet_grid(cols = vars(hgtclassname)) +
-  labs(x = 'relative establishment likelihood') +
+  labs(x = 'relative wildling abundance') +
   bottomtheme
 
 layoutheights <- distinct(plotting, species, name) %>% 
@@ -358,95 +319,121 @@ g123 <- g1 + g2 + g3 +
 ```
 
 ```{r}
-ggsave(g123, filename= 'establishment-sensitivity-randomseed.svg', 
+ggsave(g123, filename= 'abundance-sensitivity-randomseed.svg', 
        path = here('ms', 'figures'),
        scale = 1, width = 210, height = 297, units = 'mm', dpi = 300)
 ```
 
-## vs. density
+## relative abundances by species
+
+Only randomseed=2 is plotted
 
 ```{r}
-results.dens <- readRDS(here("output","results-densities.rds"))
-plotting.dens <- results.dens %>% 
+plotting.mod <- results.models %>% 
+  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
+  select(-data, -model) %>% 
+  unnest(preds) %>% 
+  filter(is.na(locality)) %>% 
+  mutate(modeled = TRUE)
+plotting.dens <- results.densities %>% 
+  filter(is.na(hgtclass) | (hgtclass == 2 & randomseed == 2)) %>% 
+  unnest(density) %>% 
   filter(!(n == 0)) %>% 
   mutate(modeled = FALSE) %>% 
   select(-daa, -n, -density)
-plotting.mod <- results %>% 
-  filter(is.na(randomseed)) %>% 
-  select(species, preds) %>% 
-  unnest(preds) %>% 
-  mutate(modeled = TRUE)
 plotting <- bind_rows(plotting.dens, plotting.mod) %>% 
-  left_join(types, by = 'nin')
-
-d <- filter(plotting, species == "P.sitchensis-lutzii") %>% 
-  arrange(modeled, locality) %>%
-  mutate(name = fct_reorder(name, fit, last))
-g1 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_point(data = filter(d, modeled, !is.na(locality)),
-             color = 'grey', alpha = 0.5,
-             position = position_jitter(width = 0, height = 0.25)) +
-  geom_point(data = filter(d, modeled == FALSE), 
-             color = CBdark2.3class[1], pch = 1, size = csize+1) +
-  geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[1], size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = CBdark2.3class[1], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-4, 1e2)) +
-  toptheme
-
-d <- filter(plotting, species == "P.abies") %>% 
-  arrange(modeled, locality) %>% 
-  mutate(name = fct_reorder(name, fit, last))
-g2 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_point(data = filter(d, modeled, !is.na(locality)),
-             color = 'grey', alpha = 0.5,
-             position = position_jitter(width = 0, height = 0.25)) +
-  geom_point(data = filter(d, modeled == FALSE), 
-             color = CBdark2.3class[2], pch = 1, size = csize+1) +
-  geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[2], size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = CBdark2.3class[2], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-5, 1e1)) +
-  middletheme
-
-d <- filter(plotting, species == "Larix") %>% 
-  arrange(modeled, locality) %>% 
-  mutate(name = fct_reorder(name, fit, last))
-g3 <- ggplot(d, aes(x = fit, y = name)) + 
-  geom_blank() +
-  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
-  geom_point(data = filter(d, modeled, !is.na(locality)),
-             color = 'grey', alpha = 0.5,
-             position = position_jitter(width = 0, height = 0.25)) +
-  geom_point(data = filter(d, modeled == FALSE), 
-             color = CBdark2.3class[3], pch = 1, size = csize+1) +
-  geom_linerange(data = filter(d, modeled, is.na(locality)),
-                 mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[3], size = 1) +
-  geom_point(data = filter(d, modeled, is.na(locality)), color = CBdark2.3class[3], size = csize) +
-  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
-  coord_cartesian(xlim = c(1e-3, 1e3)) +
-  labs(x = 'relative establishment likelihood') +
-  bottomtheme
+  left_join(types, by = 'nin') %>% 
+  mutate(hgtclassname = if_else(is.na(hgtclass), 'height \u2265 30 cm',
+                                'height \u2265 100 cm'),
+         pointshape = if_else(modeled, 'susceptibility (modelled)', 
+                              'vulnerability (surveyed)'))
 
 layoutheights <- distinct(plotting, species, name) %>% 
   group_by(species) %>% 
   summarize(n = n()) %>% 
   arrange(desc(species)) %>% 
   pull(n)
-g123 <- g1 + g2 + g3 + 
-  plot_layout(nrow = 3, heights = layoutheights)
+```
+
+### P.sitchensis-lutzii
+
+```{r}
+d <- filter(plotting, species == "P.sitchensis-lutzii", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[1], size = 1) +
+  geom_point(color = CBdark2.3class[1], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-4, 1e2)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = '*Picea sitchensis* / *Picea* \u00D7 *lutzii*',
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
 ```
 
 ```{r}
-ggsave(g123, filename= 'establishment-vs-density.svg', 
-       path = here('ms', 'figures'),
-       scale = 1, width = 210, height = 297, units = 'mm', dpi = 300)
+ggsave(g, filename= 'Ps.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[1]*3+20, units = 'mm', dpi = 300)
+```
+
+### P.abies
+
+```{r}
+d <- filter(plotting, species == "P.abies", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[2], size = 1) +
+  geom_point(color = CBdark2.3class[2], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-5, 1e1)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = '*Picea abies*',
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
+```
+
+```{r}
+ggsave(g, filename= 'Pa.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[2]*3+20, units = 'mm', dpi = 300)
+```
+
+### Larix
+
+```{r}
+d <- filter(plotting, species == "Larix", randomseed == 2 | is.na(randomseed)) %>% 
+  arrange(desc(hgtclass), desc(modeled)) %>% 
+  mutate(name = fct_reorder(name, fit, first))
+g <- ggplot(d, aes(x = fit, y = name, shape = pointshape)) + 
+  geom_blank() +
+  geom_hline(yintercept = which(levels(d$name) == 'forest'), linetype = "dotted") +
+  geom_linerange(mapping = aes(xmin = ci.l, xmax = ci.u), color = CBdark2.3class[3], size = 1) +
+  geom_point(color = CBdark2.3class[3], size = csize) +
+  scale_x_log10(labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  scale_shape_manual(values = c(20, 1)) +
+  coord_cartesian(xlim = c(1e-3, 1e3)) +
+  facet_grid(cols = vars(hgtclassname)) +
+  labs(title = '*Larix* spp.',
+       x = 'relative wildling abundance') +
+  guides(shape = guide_legend(ncol = 2, title = element_blank(), reverse = TRUE)) +
+  topbottomtheme
+```
+
+```{r}
+ggsave(g, filename= 'L.svg', 
+       path = here('ms', 'figures', 'susceptibility'),
+       scale = 1.4, width = 210, height = layoutheights[3]*3+20, units = 'mm', dpi = 300)
 ```
 
 ## sensitivity to offsetting seed rain
